err/redsolutioncms.django-utilities.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redsolutioncms.django_utilities-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/utilities'...
Compiling './lib/python3.5/site-packages/utilities/fields.py'...
***   File "./lib/python3.5/site-packages/utilities/fields.py", line 77
    def __init__(self, from_date=datetime.date(DEFAULT_FROM_YEAR, 01, 01),
                                                                   ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/utilities/locale'...
Listing './lib/python3.5/site-packages/utilities/locale/ru'...
Listing './lib/python3.5/site-packages/utilities/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/utilities/management'...
Listing './lib/python3.5/site-packages/utilities/management/commands'...
Compiling './lib/python3.5/site-packages/utilities/management/commands/imagekit_recache.py'...
***   File "./lib/python3.5/site-packages/utilities/management/commands/imagekit_recache.py", line 45
    print 'Forced remove previous cache dir: ', model_cls._ik.cache_dir,
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/utilities/middleware.py'...
***   File "./lib/python3.5/site-packages/utilities/middleware.py", line 8
    print "######################## Exception #############################"
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/utilities/redsolution_setup'...
Listing './lib/python3.5/site-packages/utilities/redsolution_setup/templates'...
Listing './lib/python3.5/site-packages/utilities/redsolution_setup/templates/utilities'...
Listing './lib/python3.5/site-packages/utilities/redsolution_setup/templates/utilities/redsolutioncms'...
Listing './lib/python3.5/site-packages/utilities/static'...
Listing './lib/python3.5/site-packages/utilities/static/utilities'...
Listing './lib/python3.5/site-packages/utilities/static/utilities/js'...
Listing './lib/python3.5/site-packages/utilities/templates'...
Listing './lib/python3.5/site-packages/utilities/templates/admin'...
Listing './lib/python3.5/site-packages/utilities/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
